--- a/apps/web/src/pages/blog/categories/index.astro
+++ b/apps/web/src/pages/blog/categories/index.astro
@@ -98,7 +98,7 @@ const description = 'Explore all blog categories and find articles on topics tha
   </head>
   <body class="bg-obsidian text-white font-exo overflow-x-hidden">
     <!-- Global Header -->
-    <GlobalHeader client:load currentPath={Astro.url.pathname} />
+    <GlobalHeader client:only="react" currentPath={Astro.url.pathname} />
 
     <!-- Animated Background Grid -->
     <div class="fixed inset-0 pointer-events-none opacity-20">
